schoodle-service.yml
#frontend service
apiVersion: v1
kind: Service
metadata:
  name: schoodle-ui
spec:
  selector:
    app: schoodle-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
      nodePort: 30000    
  type: NodePort    

---

#backend service
apiVersion: v1
kind: Service
metadata:
  name: schoodle-api
spec:
  selector:
    app: schoodle-api
  ports:
    - protocol: TCP
      port: 5000           
      targetPort: 5000    
      nodePort: 30001    
  type: NodePort
