schoodle-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schoodle-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schoodle-api
  template:
    metadata:
      labels:
        app: schoodle-api
    spec:
      containers:
      - name: schoodle-api
        image: esiee79798987/schoodle-api:1
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: schoodle-api
spec:
  selector:
    app: schoodle-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: NodePort

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: schoodle-api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*" 

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: schoodle-api-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - schoodle-api-gateway
  http:
  - route:
    - destination:
        host: schoodle-api.default.svc.cluster.local
        port:
          number: 5000
